// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconNumberInput > renders correctly 1`] = `
<evocon-v-input-stub
  filled="true"
  grow="false"
  inputwithbottomborder="true"
  modelvalue="1 234 234 234"
  truncateinput="false"
  type="text"
  usechip="false"
/>
`;

exports[`EvoconNumberInput > renders correctly as a chip 1`] = `
<evocon-v-input-stub
  filled="true"
  grow="false"
  inputwithbottomborder="true"
  modelvalue="1 234 234 234"
  truncateinput="false"
  type="text"
  usechip="true"
/>
`;

exports[`EvoconNumberInput > renders correctly as a chip without value 1`] = `
<evocon-v-input-stub
  filled="true"
  grow="false"
  inputwithbottomborder="true"
  modelvalue=""
  truncateinput="false"
  type="text"
  usechip="true"
/>
`;
